refactoring, fixes and features for first working version

--- a/Server/Pages/Error.cshtml
+++ b/Server/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FantaAsta.Server.Pages.ErrorModel
+@model FantasyAuction.Server.Pages.ErrorModel
 @{
     Layout = "_Layout";
     ViewData["Title"] = "Error";
