--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -5,5 +5,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using FantaAsta.Client
-@using FantaAsta.Client.Shared
+@using FantasyAuction.Client
+@using FantasyAuction.Client.Components
+@using FantasyAuction.Client.Services
