--- a/Client/Components/Timer.razor
+++ b/Client/Components/Timer.razor
@@ -11,14 +11,14 @@
         #clockdiv > div {
             padding: 10px;
             border-radius: 3px;
-            background: #00BF96;
+            background: rgb(5, 39, 103);
             display: inline-block;
         }
 
         #clockdiv div > span {
             padding: 15px;
             border-radius: 3px;
-            background: #00816A;
+            background: #3a0647;
             display: inline-block;
         }
 
