add table compoenent + fixes

--- a/Client/Components/AlertComponent.razor
+++ b/Client/Components/AlertComponent.razor
@@ -28,6 +28,11 @@
         background-color: #158CBA;
         border-color: #127ba3
     }
+
+    .alert-danger {
+        background-color: #158CBA;
+        border-color: #127ba3
+    }
 </style>
 
 <div class="alert-service">
