--- a/Client/Pages/Partecipate.razor
+++ b/Client/Pages/Partecipate.razor
@@ -6,7 +6,19 @@
 @inject AlertService AlertService
 @implements IDisposable
 
-@if (!IsAuctionInProgress)
+<style>
+    .card-img-top img {
+        display: flex;
+        justify-content: center;
+    }
+
+    .card-img-top img {
+        height: 150px;
+        width: 150px;
+    }
+</style>
+
+@if (!IsAuctionInProgress && Player == null)
 {
     <div class="align-items-center d-flex flex-column justify-content-center">
         <h1>Aspettando l'inizio dell'asta</h1>
@@ -23,7 +35,7 @@
 {
     <div class="align-items-center d-flex flex-column justify-content-center">
         <h1>All'invio dell'offerta mancano</h1>
-        <Timer Time="@RemainingTimeToBid.Value"
+        <Timer Time="@RemainingTimeToBid"
                TimeFinished="e => SendBidAndClear()">
         </Timer>
     </div>
@@ -35,7 +47,7 @@
         <input aria-describedby="bidderNameHelp"
                @bind-value="Bidder"
                class="form-control"
-               disabled="@(IsAuctionInProgress && Player != null)"
+               disabled="@(IsAuctionInProgress || Player != null)"
                id="bidderName"
                type="text">
         <small class="form-text text-muted"
@@ -49,9 +61,10 @@
 {
     <div class="align-items-center d-flex flex-column justify-content-center">
         <div class="card text-center">
-            <img alt="@Player.Nome"
-                 class="card-img-top"
-                 src="@Player.Img" />
+            <div class="card-img-top">
+                <img alt="@Player.Nome"
+                     src="@Player.Img" />
+            </div>
             <div class="card-body">
                 <h5 class="card-title">@Player.Nome</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -60,9 +73,9 @@
                         <span class="input-group-text">FM</span>
                     </div>
                     <input aria-label="Amount (to the nearest million)"
-                           @bind-value="Bid.Amount"
+                           @bind="Amount"
                            class="form-control"
-                           type="text">
+                           type="number">
                     <div class="input-group-append">
                         <span class="input-group-text">.000.000,00</span>
                     </div>
@@ -85,6 +98,7 @@
     public Bid Bid;
     public bool IsAuctionInProgress;
     public string Bidder;
+    public int Amount;
 
     protected override async Task OnInitializedAsync()
     {
@@ -106,12 +120,7 @@
             RemainingTimeToNextPlayer = null;
             RemainingTimeToBid = new TimeSpan(0, 0, 20);
             Player = player;
-            Bid = new Bid
-            {
-                PlayerId = player.Id,
-                Bidder = Bidder,
-                Amount = 0
-            };
+            Amount = 0;
             StateHasChanged();
         });
 
@@ -132,17 +141,25 @@
     /// </summary>
     private async void SendBidAndClear()
     {
-        if (Connected && !string.IsNullOrWhiteSpace(Bidder) && Player != null && Bid != null)
+        if (Connected && !string.IsNullOrWhiteSpace(Bidder) && Player != null)
         {
+            Bid = new Bid
+            {
+                PlayerId = Player.Id,
+                Bidder = Bidder,
+                Amount = Amount
+            };
             await SendBid();
+
+            Player = null;
+            Bid = null;
         }
-        else
+        else if(!Connected || string.IsNullOrWhiteSpace(Bidder))
         {
             AlertService.AddMessage(new Alert("La tua offerta non può essere inviata, salti questo turno", AlertType.Danger));
         }
 
-        Player = null;
-        Bid = null;
+        RemainingTimeToBid = null;
         StateHasChanged();
     }
 
