--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello, Player!</h1>
 
-Welcome to your new app.
+Benvenuto nell applicazione per la gestione di un'asta di fantacalcio.
