--- a/Client/Pages/Administration.razor
+++ b/Client/Pages/Administration.razor
@@ -213,6 +213,7 @@
 
     private void ClearPlayer()
     {
+        SpinnerService.Hide();
         CurrentPlayer = null;
         Bids = new Bid[] { };
         Modal.Close();
